# rs_anima

./: .gitignore  Cargo.toml  index.js  index_old.js  package.json  vercel.json  webpack.config.js
pkg/: README.md  package.json  rust_anima.d.ts  rust_anima.js  rust_anima_bg.wasm  rust_anima_bg.wasm.d.ts
src/: lib.rs  lisa.rs  lisa4.rs  math.rs  polygon.rs
